--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
   "dependencies": {
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.1.3",
+    "@types/mocha": "^5.2.0",
+    "@types/sinon": "^5.0.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "sinon": "^5.0.10",
+    "typescript": "^2.8.4"
   }
 }
