--- a/package.json
+++ b/package.json
@@ -4,20 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ngx-translate/core": "^10.0.2",
-    "@ngx-translate/http-loader": "^3.0.1"
+    "@types/jquery": "^3.3.2",
+    "@types/node": "^10.1.4",
+    "jquery": "^3.3.1",
+    "jquery-i18n": "^1.0.1",
+    "ts-node": "^6.0.5"
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/jsdom": "^11.0.4",
     "@types/mocha": "^5.2.0",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
+    "jsdom": "^11.11.0",
     "mocha": "^5.2.0",
+    "reflect-metadata": "^0.1.12",
     "sinon": "^5.0.10",
     "typescript": "^2.8.4"
   }
