--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/jquery": "^3.3.2",
     "@types/node": "^10.1.4",
+    "i18next-sync-fs-backend": "^1.1.0",
     "jquery": "^3.3.1",
     "jquery-i18n": "^1.0.1",
     "ts-node": "^6.0.5"
@@ -27,6 +28,7 @@
     "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.12",
     "sinon": "^5.0.10",
-    "typescript": "^2.8.4"
+    "typescript": "^2.8.4",
+    "xmlhttprequest": "^1.8.0"
   }
 }
