--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jquery": "^3.3.2",
     "@types/node": "^10.1.4",
     "i18next-sync-fs-backend": "^1.1.0",
+    "i18next-xhr-backend": "^1.5.1",
     "jquery": "^3.3.1",
     "jquery-i18n": "^1.0.1",
     "ts-node": "^6.0.5"
