--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,15 @@
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "outFile": "../../built/local/tsc.js",
-        "sourceMap": true
+        "sourceMap": true,
+        "target": "es2015"
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "**/*.spec.ts"
     ],
     "exclude": [
-        "node_modules",
-        "**/*.spec.ts"
+        "node_modules"
+
     ]
 }
