--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "scripts": {
     "serve": "http-server",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/i18next-xhr-backend": "^1.4.2",
     "@types/jquery": "^3.3.2",
     "@types/node": "^10.1.4",
     "@types/rx": "^4.1.1",
+    "i18next": "^17.0.11",
     "i18next-sync-fs-backend": "^1.1.0",
-    "i18next-xhr-backend": "^1.5.1",
+    "i18next-xhr-backend": "^3.1.1",
     "jquery": "^3.3.1",
     "jquery-i18n": "^1.0.1",
     "rxjs": "^6.2.0",
