--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "http-server",
+    "serve": "http-server --cors=*",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,10 +16,12 @@
     "@types/node": "^10.1.4",
     "@types/rx": "^4.1.1",
     "i18next": "^17.0.11",
-    "i18next-sync-fs-backend": "^1.1.0",
+    "i18next-sync-fs-backend": "^1.1.1",
     "i18next-xhr-backend": "^3.1.1",
-    "jquery": "^3.3.1",
+    "i18nextify": "^2.4.0",
+    "jquery": "^3.4.1",
     "jquery-i18n": "^1.0.1",
+    "jquery-i18next": "^1.2.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
     "ts-node": "^6.0.5"
@@ -35,7 +37,7 @@
     "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.12",
     "sinon": "^5.0.10",
-    "typescript": "^2.8.4",
+    "typescript": "^3.5.3",
     "xmlhttprequest": "^1.8.0"
   }
 }
