--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.4.1",
     "jquery-i18n": "^1.0.1",
     "jquery-i18next": "^1.2.1",
+    "moment": "^2.24.0",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
     "ts-node": "^6.0.5"
