--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery-i18next": "^1.2.1",
     "moment": "^2.24.0",
     "moment-with-locales-es6": "^1.0.1",
+    "numeral": "^2.0.6",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
     "ts-node": "^6.0.5"
